# MIDI-2-CV

./: README.md
midi_to_cv/: CMakeLists.txt  error_list.h  main.c  main.h  mcp4725.c  mcp4725.h  midi.h  midi_uart.c  midi_uart.h
